tema pe acasa + proiectul ToDoList

--- a/style.css
+++ b/style.css
@@ -1,5 +1,90 @@
 .toDoWrapper {
+    height: 32px;
+    padding: 4px 8px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 150px;
+    
 }
 
+.modalWrapper{
+    display: none;
+    place-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgb(32, 32, 32, .4);
+}
+
+.activeModal {
+    display: grid;
+}
+
+.modalContainer{
+    position: relative;
+    border: 1px solid gray;
+    border-radius: 6px;
+    padding: 32px;
+    background: white;
+    box-shadow: 0 4px 8px rgb(32, 32, 32, .7);
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+}
+
+.formInput{
+    height: 32px;
+    padding: 4px 8px;
+    border: none;
+    border-bottom: 1px solid gray;
+}
+
+.formInput.focus {
+    outline: none;
+
+}
+
+.formBtn{
+    height: 32px;
+}
+
+.closeModal{
+    font-size: 20px;
+    position: absolute;
+    top: 32px;
+    right: 32px;
+    cursor: pointer;
+
+}
+
+.openModal{
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.listWrapper{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.listContainer{
+    display: flex;
+
+}
+
+.listSide{
+    width: 250px;
+
+}
+
+.toDoDetails{
+    display: felx;
+    gap: 4px;
+}
